<resources>
    <string name="app_name">Proyecto</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="telefono">Teléfono</string>
    <string name="id">ID</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="fecha">Fecha</string>
</resources>